# pbrpc

./: CMakeLists.txt  README.md  TODO  calc.pb-c.c  calc.pb-c.h  client.c  compile-proto.sh  pbrpc-clnt.c  pbrpc-clnt.h  pbrpc.c  pbrpc.h  pbrpc.pb-c.c  pbrpc.pb-c.h  pbrpc.proto  rpc.c  rpc.h  rpcclnt.h  server.c
pbcodec/: README.md  client.go  pbrpc.pb.go  server.go  utils.go
tests/: CMakeLists.txt  build-go-tests.sh.in  client.c  client.go  server.c  server.go
tests/calc/: calc.pb.go
